k8s/prod/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: ai-ml-room-service
  namespace: prod

spec:
  type: ClusterIP

  selector:
    app: ai-ml-room
    env: prod

  ports:
    - port: 80
      targetPort: 3000
