k8s/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ai-ml-room-ingress
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx

  rules:
    - host: ai.tfdevs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ai-ml-room-service
                port:
                  number: 80
